# tale

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  rustfmt.toml
book/: book.toml
crates/cli/: Advanced_Features.md  Cargo.toml  Getting_Started.md  README.md
crates/cli/src/: help.rs  main.rs
crates/cli/src/snippets/: ex01_table_basics.tale  ex02_table_list.tale  ex03_table_probabilities.tale  ex04_table_csv_keys.tale  ex05_table_lookup.tale  ex06_table_tags.tale  ex07_table_statements.tale  ex08_table_blocks.tale  ex11_table_group_basics.tale  ex12_table_group_statements.tale  ex21_script_basics.tale  ex22_script_scopes.tale  ex31_expressions.tale  ex32_rolls.tale  ex33_lookup.tale  ex41_load.tale  ex51_show.tale  ex52_modify.tale  ex53_clear.tale  ex54_output_interpolation.tale  ex55_assignment.tale  h01_general.help  h02_topics.help  h03_advanced.help  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  lib.rs  state.rs  utils.rs
crates/engine/src/ast/: analyzer.rs  eval.rs  mod.rs
crates/engine/src/lexer/: README.md  mod.rs
crates/engine/src/parsers/: atoms.rs  definitions.rs  expressions.rs  mod.rs  statements.rs
crates/engine/src/samples/: 02_table_roll_def.tale  05_table_keyed_word.tale  06_table_group.tale  07_table_blocks.tale  11_statement_assignment.tale  12_statement_clear.tale  13_statement_invoke.tale  14_statement_load.tale  15_statement_lookup.tale  16_statement_modify.tale  17_statement_output.tale  18_statement_roll.tale  21_script.tale  92_supporting_defs.tale  93_scoping.tale  95_recursion.tale  mod.rs
docs/: README.md  (+2 more)
(+36 files in other folders)
