[package]
name = "tale"
version = "0.1.0"
edition = "2024"
description = "A Scripting language for TTRPG Tables"
repository = "https://github.com/kaedr/tale"
license = "MPL-2.0"
keywords = ["scripting", "scripting-engine", "scripting-language", "ttrpg", "tale"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "tale"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
rustyline = "15.0.0"
tale_lib ={ path = "../engine"}

[features]
with-file-history = []
