[package]
name = "tale_lib"
version = "0.1.0"
edition = "2024"
description = "A Scripting language for TTRPG Tables"
repository = "https://github.com/kaedr/tale"
license = "MPL-2.0"
keywords = ["scripting", "scripting-engine", "scripting-language", "ttrpg", "tale"]
categories = ["compilers", "parser-implementations"]

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "0.10", features = ["pratt"] }
glob = "0.3"
logos = "0.15"
rand = "0.9.0"
regex = "1.11"
